search bar bug fix on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -288,6 +288,7 @@ main {
   -webkit-appearance: none;
   border:none;
   width: 100%;
+  border-radius: 0;
 }
 
 
